# codeartifact_release

./: README.rst  setup.cfg  setup.py  tox.ini
codeartifact_release/: login.py  perform_release.py  utils.py
docs/: codeartifact_release.rst  conf.py  index.rst
tests/codeartifact_release/: test_perform_release.py  test_utils.py
