[metadata]
name = codeartifact_release
author = Thomas Adam
author_email = t.adam21@gmail.com
long_description = file: README.rst
url = https://github.com/ta2fb/codeartifact_release
python_requires = >=3.6
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[extras]
dev =
    docutils<0.16,>=0.10
    Pygments~=2.6
    pytest~=5.4
    pytest-xdist~=1.32.0
    s3pypi~=0.10
    tox~=3.14
    twine~=3.2.0

[flake8]
max-line-length = 120
